CP Bank Accounts on PDF - fix AC #1
[#183167387]

Co-authored-by: Eric Johnson <eric.m.johnson@state.mn.us>